--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
-<html>
-	<body>
+<html><head>
+	
+
 		<title>Successful Troll</title>
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 		
-<meta property="og:title" content="Successful Troll" />
-<meta property="og:type" content="website" />
-<meta property="og:description" content="Successful Troll"/>
+<meta property="og:title" content="Successful Troll">
+<meta property="og:type" content="website">
+<meta property="og:description" content="Successful Troll">
 		<style type="text/css" media="screen">
 		html, body { height:100%; background-color: #ffffff;}
 		body { margin:0; padding:0; overflow:hidden; }
@@ -18,7 +19,7 @@
 
 
 	</head>
-	<body onLoad="setInterval('con_seg()',1000);">
-		<object style="visibility: visible;" data="successful_troll.swf" type="application/x-shockwave-flash" id="disp" height="100%" width="100%"><param value="transparent" name="wmode"></object>
-	</body>
-</html>
+	<body onload="setInterval('con_seg()',1000);" data-block-block-ad-block="true">
+		<object style="visibility: visible;" data="successful_troll.swf" type="application/x-shockwave-flash" id="disp" height="100%" width="100%" rmad-admiral=""><param value="transparent" name="wmode"></object>
+	
+</body></html>
