--- a/index.html
+++ b/index.html
@@ -1,24 +1,19 @@
-<html><head>
-	
-
+<html>
+	<head>
 		<title>Successful Troll</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-		
-<meta property="og:title" content="Successful Troll">
-<meta property="og:type" content="website">
-<meta property="og:description" content="Successful Troll">
+		<meta property="og:title" content="Successful Troll">
+		<meta property="og:type" content="website">
+		<meta property="og:description" content="Successful Troll">
 		<style type="text/css" media="screen">
-		html, body { height:100%; background-color: #ffffff;}
-		body { margin:0; padding:0; overflow:hidden; }
-		#flashContent { width:100%; height:100%; }
-		
+			html, body { height:100%; background-color: #ffffff;}
+			body { margin:0; padding:0; overflow:hidden; }
+			#flashContent { width:100%; height:100%; }
 		</style>
-
-<script type="text/javascript">var switchTo5x=true;</script>
-
-
+		<script type="text/javascript">var switchTo5x=true;</script>
+		<script src="https://unpkg.com/@ruffle-rs/ruffle"></script>
 	</head>
 	<body onload="setInterval('con_seg()',1000);" data-block-block-ad-block="true">
 		<object style="visibility: visible;" data="successful_troll.swf" type="application/x-shockwave-flash" id="disp" height="100%" width="100%" rmad-admiral=""><param value="transparent" name="wmode"></object>
-	
-</body></html>
+	</body>
+</html>
