--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
 		</style>
 		<script type="text/javascript">var switchTo5x=true;</script>
 		<script src="https://unpkg.com/@ruffle-rs/ruffle"></script>
+		<script>
+		window.RufflePlayer.config = {
+				autoplay: "auto"
+		};
+		</script>
 	</head>
 	<body onload="setInterval('con_seg()',1000);" data-block-block-ad-block="true">
 		<object style="visibility: visible;" data="successful_troll.swf" type="application/x-shockwave-flash" id="disp" height="100%" width="100%" rmad-admiral=""><param value="transparent" name="wmode"></object>
